<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Common-->
    <string name="app_name">M3C</string>
    <string name="music_title">Música</string>
    <string name="tv_title">TV</string>
    <string name="video_title">Video</string>
    <string name="lights_title">Luces</string>
    <string name="ac_title">Aire</string>
    <string name="bar_title">Bar</string>
    <string name="info_title">Info</string>
    <string name="preferences_title">Configuración</string>
    <string name="tab_title_separator">/</string>
    <string name="time_default">--:--</string>
    <string name="time_default_with_hours">-:--:--</string>
    <string name="no_value">----</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">cancelar</string>
    <string name="version">Versión</string>
    <string name="password">Contraseña</string>
    <string name="wrong_password">Contraseña incorrecta</string>
    <string name="device_admin_enabled">Device admin activado</string>
    <string name="device_owner_not_enabled">Modo kiosco no disponible. La aplicación no es device owner</string>
    <string name="name">Nombre</string>
    <string name="close">X</string>
    <string name="list_bullet">-</string>
    <string name="back">Volver</string>
    <string name="format_time">HH:mm</string>
    <string name="format_date_long">d \'de\' MMMM, yyyy</string>

    <!--Music-->
    <string name="artist">Artista</string>
    <string name="album">Álbum</string>
    <string name="song">Canción</string>

    <!--TV-->
    <string name="volume">Vol</string>
    <string name="channel">Ch</string>
    <string name="info">Info</string>
    <string name="src">Src</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="tv_warning">Asegúrese de que la TV esté encendida y utilizando la entrada de cable</string>

    <!--Video-->
    <string name="tv_controls">TV</string>
    <string name="video_warning">Asegúrese de que la TV esté encendida y utilizando la entrada HDMI</string>

    <!--Lights-->
    <string name="light_type_on_off">On/Off</string>
    <string name="light_type_dimmer">Dimmer</string>
    <string name="light_default_name">Luz</string>
    <string name="light_master">Master</string>
    <string name="lights_record_scene">Grabar</string>
    <string name="lights_hide_record_scene_controls">Esconder controles</string>
    <string name="light_scene_intro_init">Comienzo intro</string>
    <string name="light_scene_intro_end">Final intro</string>
    <string name="light_scene_clean">Limpieza</string>
    <string name="light_scene_special">Especial</string>

    <!--AC-->
    <string name="ac_temp_unit">°C</string>
    <string name="ac_status">Estado: </string>
    <string name="ac_status_on">encendido</string>
    <string name="ac_status_off">apagado</string>
    <string name="ac_status_turning_on">encendiendo</string>
    <string name="ac_status_turning_off">apagando</string>
    <string name="ac_mode">Modo:</string>
    <string name="ac_mode_auto">auto</string>
    <string name="ac_mode_heat">calor</string>
    <string name="ac_mode_cool">frío</string>

    <!--Info-->
    <string name="info_special_offer">Promoción</string>
    <string name="info_shift_start">Ingreso</string>
    <string name="info_shift_end">Fin de turno</string>
    <string name="info_alarm">Despertador</string>
    <string name="info_bill_lodging">Alojamiento</string>
    <string name="info_bill_surcharge">Recargos/Pernocte</string>
    <string name="info_bill_bar">Bar</string>
    <string name="info_bill_bonus">Bonificaciones</string>
    <string name="info_bill_discount">Descuentos</string>
    <string name="info_bill_paid">Pagado a cuenta</string>
    <string name="info_bill_total">Total</string>
    <string name="info_services">Servicios</string>
    <string name="info_tariffs">Tarifas</string>
    <string name="info_tariffs_category">Categoría</string>
    <string name="info_tariffs_shift">Turno</string>
    <string name="info_tariffs_duration">Duración</string>
    <string name="info_tariffs_overnight">Pernocte</string>

    <!--Settings-->
    <string name="settings_update">Actualizar</string>
    <string name="settings_room_number">Número de habitación</string>
    <string name="settings_sgh_address">Dirección del servidor SGH</string>
    <string name="settings_sgh_port">Puerto de la conexión SGH</string>
    <string name="settings_pic_address">Dirección del PIC</string>
    <string name="settings_m3s_address">Dirección del servidor M3S</string>
    <string name="settings_start_on_boot">Ejecutar al iniciar dispositivo</string>
    <string name="settings_reboot_allowed">Permitir reinicio del dispositivo</string>
    <string name="settings_show_record_scene_controls">Mostrar controles para el grabado de escenas de luz</string>
    <string name="settings_show_ac_controls">Mostrar controles del aire</string>
    <string name="settings_message_volume_percentage">Volumen para los mensajes (%)</string>
    <string name="settings_intro_volume_percentage">Volumen para intro (%)</string>
    <string name="settings_tv_remote_code">Código del control de TV</string>
    <string name="settings_show_video_controls">Mostrar controles de video</string>
    <string name="settings_kodi_address">Dirección del media center Kodi</string>
    <string name="settings_kodi_port">Puerto de la conexión con el media center Kodi</string>
    <string name="settings_theme_color">Color del tema</string>
    <string name="settings_add_light">Añadir luz</string>
    <string name="settings_max_lights_reached">No se pueden añadir mas luces</string>
    <string name="settings_automatic_if_empty">Dejar en blanco para determinar automáticamente</string>

</resources>
