<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="room_number"
        android:numeric="integer"
        android:title="@string/settings_room_number" />
    <EditTextPreference
        android:key="sgh_address"
        android:title="@string/settings_sgh_address" />
    <EditTextPreference
        android:key="m3s_address"
        android:title="@string/settings_m3s_address" />
    <CheckBoxPreference
        android:key="start_on_boot"
        android:title="@string/settings_start_on_boot" />
    <Preference
        android:title="@string/lights_title">
        <intent android:action="bei.m3c.activities.LightPreferencesActivity" />
    </Preference>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_ac_controls"
        android:title="@string/settings_show_ac_controls" />
    <EditTextPreference
        android:defaultValue="50"
        android:key="message_volume_percentage"
        android:numeric="integer"
        android:title="@string/settings_message_volume_percentage" />
    <EditTextPreference
        android:key="tv_remote_code"
        android:numeric="integer"
        android:title="@string/settings_tv_remote_code" />
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:defaultValue="@color/default_accent_color"
        android:key="theme_color"
        android:title="@string/settings_theme_color" />
</PreferenceScreen>