<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InfoFragment">

    <LinearLayout
        style="@style/fragmentContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textExtraLarge" />

                <TextView
                    android:id="@+id/info_time_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textGiant" />

                <GridLayout
                    android:id="@+id/info_gridlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2">

                    <TextView
                        style="@style/textInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_special_offer" />

                    <TextView
                        android:id="@+id/info_special_offer_textview"
                        style="@style/textInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />

                    <TextView
                        style="@style/textInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_shift_start" />

                    <TextView
                        android:id="@+id/info_shift_start_textview"
                        style="@style/textInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />

                    <TextView
                        style="@style/textInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_shift_end" />

                    <TextView
                        android:id="@+id/info_shift_end_textview"
                        style="@style/textInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />

                    <TextView
                        style="@style/textInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_alarm" />

                    <TextView
                        android:id="@+id/info_alarm_textview"
                        style="@style/textInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />
                </GridLayout>
            </LinearLayout>


            <GridLayout
                android:id="@+id/info_bill_gridlayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:columnCount="2">

                <TextView
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_bill_lodging" />

                <TextView
                    android:id="@+id/info_bill_lodging_textview"
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <TextView
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_bill_surcharge" />

                <TextView
                    android:id="@+id/info_bill_surcharge_textview"
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <TextView
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_bill_bar" />

                <TextView
                    android:id="@+id/info_bill_bar_textview"
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <TextView
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_bill_bonus" />

                <TextView
                    android:id="@+id/info_bill_bonus_textview"
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <TextView
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_bill_discount" />

                <TextView
                    android:id="@+id/info_bill_discount_textview"
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <TextView
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_bill_paid" />

                <TextView
                    android:id="@+id/info_bill_paid_textview"
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <TextView
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_bill_total"
                    android:textSize="@dimen/textExtraExtraLarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_bill_total_textview"
                    style="@style/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="@dimen/textExtraExtraLarge"
                    android:textStyle="bold" />

            </GridLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"></LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/info_services_button"
                    style="@style/buttonNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/info_services" />

                <Button
                    android:id="@+id/info_tariffs_button"
                    style="@style/buttonNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/info_tariffs" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
