<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/popup_info_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/popup_info_image_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/popup_info_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layoutMargin"
                android:layout_weight="1"
                android:textSize="@dimen/textExtraLarge" />

            <Button
                android:id="@+id/popup_info_close_button"
                style="@style/buttonNormal"
                android:layout_margin="0dp"
                android:text="@string/close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"></LinearLayout>

        <LinearLayout
            android:id="@+id/popup_info_tariff_listview_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="@dimen/layoutMargin"
            android:layout_marginRight="@dimen/layoutMargin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/info_tariffs_category"
                android:textSize="@dimen/textLarge" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/info_tariffs_shift"
                android:textSize="@dimen/textLarge" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/info_tariffs_duration"
                android:textSize="@dimen/textLarge" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/info_tariffs_overnight"
                android:textSize="@dimen/textLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/layoutMargin"
            android:layout_marginLeft="@dimen/layoutMargin"
            android:layout_marginRight="@dimen/layoutMargin"
            android:layout_weight="1">

            <ListView
                android:id="@+id/popup_info_listview"
                style="@style/listview"
                android:layout_width="match_parent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>