<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LightsACFragment">

    <LinearLayout
        style="@style/fragmentContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ScrollView
            style="@style/scrollview"
            android:layout_width="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:id="@+id/lights_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lights_record_scene_controls_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Spinner
                        android:id="@+id/lights_scene_spinner"
                        style="@style/spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/lights_record_scene_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lights_record_scene" />

                    <Button
                        android:id="@+id/lights_hide_record_scene_controls_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lights_hide_record_scene_controls" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/ac_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layoutMargin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layoutMargin"
                android:text="@string/ac_title"
                android:textAllCaps="true"
                android:textSize="@dimen/textExtraLarge"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ac_power_button"
                style="@style/imageButtonExtraLarge"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/power" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ac_minus_button"
                    style="@style/imageButtonNormal"
                    android:src="@drawable/minus" />

                <TextView
                    android:id="@+id/ac_temp_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/textExtraLarge" />

                <ImageButton
                    android:id="@+id/ac_plus_button"
                    style="@style/imageButtonNormal"
                    android:src="@drawable/plus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layoutMargin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ac_status"
                    android:textSize="@dimen/textLarge" />

                <TextView
                    android:id="@+id/ac_status_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ac_mode"
                    android:textSize="@dimen/textLarge" />

                <TextView
                    android:id="@+id/ac_mode_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textLarge" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    
</FrameLayout>
