<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MusicFragment">

    <LinearLayout
        style="@style/fragmentContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ListView
                android:id="@+id/music_listview"
                style="@style/listview"
                android:layout_width="match_parent" />

            <ProgressBar
                android:id="@+id/music_listview_loading_progress_bar"
                style="@style/loadingProgressBar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <ImageView
                    android:id="@+id/music_albumart_imageview"
                    style="@style/image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/albumart_placeholder" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <TextView
                        android:id="@+id/music_title_textview"
                        style="@style/textMarquee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song"
                        android:textSize="@dimen/textNormal" />

                    <TextView
                        android:id="@+id/music_artist_textview"
                        style="@style/textMarquee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artist"
                        android:textSize="@dimen/textNormal" />

                    <TextView
                        android:id="@+id/music_album_textview"
                        style="@style/textMarquee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/album"
                        android:textSize="@dimen/textNormal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/music_time_elapsed_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_default"
                            android:textSize="@dimen/textNormal" />

                        <SeekBar
                            android:id="@+id/music_time_seekbar"
                            style="@style/seekbar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/music_time_remaining_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_default"
                            android:textSize="@dimen/textNormal" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/music_play_pause_button"
                    style="@style/imageButtonNormal"
                    android:src="@drawable/play" />

                <ImageButton
                    android:id="@+id/music_previous_button"
                    style="@style/imageButtonNormal"
                    android:src="@drawable/previous" />

                <ImageButton
                    android:id="@+id/music_stop_button"
                    style="@style/imageButtonNormal"
                    android:src="@drawable/stop" />

                <ImageButton
                    android:id="@+id/music_next_button"
                    style="@style/imageButtonNormal"
                    android:src="@drawable/next" />

                <ImageButton
                    android:id="@+id/music_volume_button"
                    style="@style/imageButtonNormal"
                    android:src="@drawable/volume_high" />

                <SeekBar
                    android:id="@+id/music_volume_seekbar"
                    style="@style/seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
